--- a/Listar/parceiro.html
+++ b/Listar/parceiro.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div class="form">
         <div class="">
-          <h1>Usuários</h1>
+          <h1>Parceiros</h1>
         </div>
       </div>
     </div>
