--- a/principal.html
+++ b/principal.html
@@ -13,12 +13,11 @@
           <h1>Área de Trabalho</h1>
 
           <menu class="btn1">
-              <li><a href="Cadastro/cliente.html">Cadastrar Cliente</a></li>
-              <li><a href="Cadastro/produto.html">Cadastrar Produto</a></li>
-              <li><a href="Cadastro/servico.html">Cadastrar Serviço</a></li>
-              <li><a href="Cadastro/usuario.html">Cadastrar Usuário</a></li>
+              <li><a href="Cadastro/cliente.html">Cadastrar Associado</a></li>
+              <li><a href="Cadastro/produto.html">Cadastrar Parceiros</a></li>
+              <li><a href="Cadastro/servico.html">Cadastrar Eventos</a></li>
           </menu>
-    
+  
       </div>
     </div>
   </body>
