--- a/Listar/evento.html
+++ b/Listar/evento.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div class="form">
         <div class="">
-          <h1>Serviços</h1>
+          <h1>Próximos Eventos</h1>
         </div>
       </div>
     </div>
