--- a/index.html
+++ b/index.html
@@ -27,7 +27,34 @@
       </menu>
     </header>
 
-    <div class="load"></div>
+    <div class="load">
+      <div class="textCenter">
+        <h1>A²C²F - Associação Atlética Ciência da Computação UniFagoc</h1>
+        <p>
+          "A A²C²F é a primeira entidade estudantil do curso de Computação da
+          UniFagoc, <br />
+          feita por alunos. Fundada no ano de 2019, já se firmou como uma das
+          principais Atléticas da UniFagoc."
+        </p>
+      </div>
+  
+      <div class="redes">
+        <ul>
+          <li>
+            <a href=""><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fab fa-whatsapp"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
     <script src="ajax.js"></script>
   </body>
