--- a/evento.html
+++ b/evento.html
@@ -1,20 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/evento.css">
-  <script
-  src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-  crossorigin="anonymous"
-></script>
-  <title>Eventos</title>
-  
-</head>
-<body>
-  <h1>Eventos</h1>
-  <script src="ajax.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/evento.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <title>Eventos</title>
+  </head>
+  <body>
+    <div class="title"><h1>Eventos</h1></div>
+
+    <div class="eventsPrc">
+      <div class="events">
+        <div class="image">
+          <img src="img/rave.jpg" alt="" />
+        </div>
+        <h2>Rave das Atléticas</h2>
+        <div class="descricao">
+          <p>Venha Participar da maior Rave da Região</p>
+        </div>
+      </div>
+
+      <div class="events">
+        <div class="image">
+          <img
+            src="img/cropped-13920740_1049665555069475_9216149874724876007_n-1.png"
+            alt=""
+          />
+        </div>
+        <h2>Semana Acadêmica</h2>
+        <div class="descricao">
+          <p>Vem aí a Semana Acadêmica de Computação!</p>
+        </div>
+      </div>
+
+      <div class="events">
+        <div class="image">
+          <img src="img/camp.jpg" alt="" />
+        </div>
+        <div class="nameEvent"></div>
+        <h2>Esports</h2>
+        <div class="descricao">
+          <p>Venha torcer pelos nossos Associados!</p>
+        </div>
+      </div>
+
+      <div class="events">
+        <div class="image">
+          <img src="img/campanha.jpg" alt="" />
+        </div>
+        <h2>Campanha do Agasalho</h2>
+        <div class="descricao">
+          <p>Doe a quem precisa!</p>
+        </div>
+      </div>
+    </div>
+
+    <script src="ajax.js"></script>
+  </body>
 </html>
