--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a id="evento" href="#">Eventos</a></li>
         <li><a href="Listar/produto.html">Produtos</a></li>
         <li><a href="Listar/parceiro.html">Parceiros</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a id="login" href="#">Login</a></li>
       </menu>
     </header>
 
