--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <menu>
         <li><a id="inicio" href="#">Início</a></li>
         <li><a id="evento" href="#">Eventos</a></li>
-        <li><a href="Listar/produto.html">Produtos</a></li>
-        <li><a href="Listar/parceiro.html">Parceiros</a></li>
-        <li><a id="login" href="#">Login</a></li>
+        <li><a id="produto" href="#">Produtos</a></li>
+        <li><a id="parceiro" href="#">Parceiros</a></li>
+        <li><a target="_blank" id="login" href="login.html">Login</a></li>
       </menu>
     </header>
 
