--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="ajax.js"></script>
+
   </head>
   <body>
     <header>
@@ -19,11 +21,11 @@
         <img id="logo" src="img/attComp.jpeg" alt="" />
       </div>
       <menu>
-        <li><a id="inicio" href="#">Início</a></li>
-        <li><a id="evento" href="#">Eventos</a></li>
-        <li><a id="produto" href="#">Produtos</a></li>
-        <li><a id="parceiro" href="#">Parceiros</a></li>
-        <li><a target="_blank" id="login" href="login.html">Login</a></li>
+        <li><a class="hover" id="inicio" href="#">Início</a></li>
+        <li><a class="hover" id="evento" href="#">Eventos</a></li>
+        <li><a class="hover" id="produto" href="#">Produtos</a></li>
+        <li><a class="hover" id="parceiro" href="#">Parceiros</a></li>
+        <li><a class="hover" target="_blank" id="login" href="login.html">Login</a></li>
       </menu>
     </header>
 
@@ -41,21 +43,20 @@
       <div class="redes">
         <ul>
           <li>
-            <a href=""><i class="fab fa-facebook"></i></a>
+            <a class="hoverIcons" href=""><i class="fab fa-facebook"></i></a>
           </li>
           <li>
-            <a href=""><i class="fab fa-instagram"></i></a>
+            <a class="hoverIcons" href=""><i class="fab fa-instagram"></i></a>
           </li>
           <li>
-            <a href=""><i class="fab fa-twitter"></i></a>
+            <a class="hoverIcons" href=""><i class="fab fa-twitter"></i></a>
           </li>
           <li>
-            <a href=""><i class="fab fa-whatsapp"></i></a>
+            <a class="hoverIcons" href=""><i class="fab fa-whatsapp"></i></a>
           </li>
         </ul>
       </div>
     </div>
-
-    <script src="ajax.js"></script>
+    <script src="events.js"></script>
   </body>
 </html>
