--- a/inicio.html
+++ b/inicio.html
@@ -22,23 +22,24 @@
         principais Atléticas da UniFagoc."
       </p>
     </div>
-
     <div class="redes">
-      <ul>
-        <li>
-          <a href=""><i class="fab fa-facebook"></i></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-instagram"></i></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-twitter"></i></a>
-        </li>
-        <li>
-          <a href=""><i class="fab fa-whatsapp"></i></a>
-        </li>
-      </ul>
-    </div>
+        <ul>
+          <li>
+            <a class="hoverIcons" href=""><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+            <a class="hoverIcons" href=""><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a class="hoverIcons" href=""><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a class="hoverIcons" href=""><i class="fab fa-whatsapp"></i></a>
+          </li>
+        </ul>
+      </div>
     <script src="ajax.js"></script>
+    <script src="events.js"></script>
+
   </body>
 </html>
