--- a/parceiro.html
+++ b/parceiro.html
@@ -10,6 +10,8 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="ajax.js"></script>
+
     <title>Parceiros</title>
   </head>
   <body>
@@ -61,6 +63,7 @@
       </div>
     </div>
 
-    <script src="ajax.js"></script>
+    <script src="events.js"></script>
+
   </body>
 </html>
