--- a/produto.html
+++ b/produto.html
@@ -10,6 +10,10 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="ajax.js"></script>
+
+    <script src="ajax.js"></script>
+
     <title>Produtos</title>
   </head>
   <body>
@@ -61,6 +65,7 @@
       </div>
     </div>
 
-    <script src="ajax.js"></script>
+    <script src="events.js"></script>
+
   </body>
 </html>
