--- a/inicio.html
+++ b/inicio.html
@@ -10,7 +10,7 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <title>Início</title>
+    <title>Atlética</title>
   </head>
   <body>
     <div class="textCenter">
