--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +11,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Atlética</title>
+    <script src="ajax.js"></script>
+
   </head>
   <body>
     <div class="textCenter">
@@ -38,7 +40,6 @@
           </li>
         </ul>
       </div>
-    <script src="ajax.js"></script>
     <script src="events.js"></script>
 
   </body>
