--- a/venda.html
+++ b/venda.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Vendas</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/table.css" />
+    <link rel="stylesheet" href="css/table.css" />
     <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
