--- a/associado.html
+++ b/associado.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Associados</title>
-    <link rel="stylesheet" href="/css/style.css" >
-    <link rel="stylesheet" href="css/table.css">
-    <link rel="stylesheet" href="css/login.css" >
-
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/table.css" />
+    <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
     <div id="container">
@@ -29,7 +28,7 @@
               <th>Próx. Mensalidade</th>
             </tr>
           </thead>
-    
+
           <tbody>
             <tr>
               <td>Marcos Oliveira</td>
@@ -40,7 +39,6 @@
               <td>5°</td>
               <td>01/03/2019</td>
               <td>04/07/2019</td>
-
             </tr>
             <tr>
               <td>Antônio Reis</td>
@@ -51,7 +49,6 @@
               <td>5°</td>
               <td>05/12/2019</td>
               <td>12/08/2019</td>
-
             </tr>
             <tr>
               <td>Daniel Soares</td>
@@ -62,7 +59,6 @@
               <td>5°</td>
               <td>22/06/2019</td>
               <td>31/06/2019</td>
-
             </tr>
             <tr>
               <td>Rhalf</td>
@@ -73,7 +69,6 @@
               <td>5°</td>
               <td>02/23/2019</td>
               <td>29/06/2019</td>
-
             </tr>
           </tbody>
         </table>
