--- a/venda.html
+++ b/venda.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Vendas</title>
-    <link rel="stylesheet" href="/css/style.css" >
-    <link rel="stylesheet" href="css/table.css" >
-    <link rel="stylesheet" href="css/login.css" >
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/table.css" />
+    <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
     <div id="container">
